@@ -1,9 +1,9 @@
-(********************************************************************************)
-(* Base64 - Base64 codec                                                        *)
-(* Copyright (C) 2003 Nicolas Cannasse                                          *)
-(*                                                                              *)
-(* This library is free software; you can redistribute it and/or                *)
-(* modify it under the terms of the GNU Lesser General Public
+(*
+ * Base64 - Base64 codec
+ * Copyright (C) 2003 Nicolas Cannasse
+ *                                    
+ * This library is free software; you can redistribute it and/or
+ * modify it under the terms of the GNU Lesser General Public
  * License as published by the Free Software Foundation; either
  * version 2.1 of the License, or (at your option) any later version,
  * with the special exception on linking described in file LICENSE.
