@@ -94,10 +94,12 @@ module type Discrete = sig
   val to_int: t -> int
   val succ  : t -> t
   val pred  : t -> t
+  val ( -- ): t -> t -> t Enum.t
+  val ( --- ): t -> t -> t Enum.t
 end
 
 (**
-   The smallest set of operations supported by every set if numbers
+   The smallest set of operations supported by every set of numbers
 *)
 module type NUMERIC_BASE = sig
   type t
